# sol-pred-market

./: .gitignore  Anchor.toml  package-lock.json  package.json
app/: next.config.js  package.json
app/prisma/: schema.prisma
app/src/app/: layout.tsx  page.tsx
app/src/app/api/bets/: route.ts
app/src/app/api/markets/: route.ts
app/src/app/api/markets/[marketId]/: route.ts
app/src/app/api/user/[wallet]/: route.ts
app/src/app/create/: page.tsx
app/src/app/market/[marketId]/: page.tsx
app/src/app/portfolio/: page.tsx
app/src/components/: BetForm.tsx  CreateMarketForm.tsx  MarketCard.tsx  Navbar.tsx
app/src/contexts/: WalletProvider.tsx
app/src/lib/anchor/: idl.ts  program.ts
app/src/lib/solana/: connection.ts  market.ts
programs/sol-pred-market/: Cargo.toml
programs/sol-pred-market/src/: errors.rs  lib.rs
programs/sol-pred-market/src/instructions/: abort_market.rs  claim_reward.rs  create_market.rs  mod.rs  place_bet.rs  resolve_market.rs  withdraw_after_abort.rs
programs/sol-pred-market/src/state/: bet.rs  escrow_authority.rs  market.rs  market_resolution.rs  mod.rs  state.rs
tests/: bootstrap.ts  consts.ts  sol-pred-market.ts  types.ts  utils.ts
